@@ -5,7 +5,7 @@ import io.github.flemmli97.simplequests.LoaderHandler;
 import io.github.flemmli97.simplequests.SimpleQuests;
 import io.github.flemmli97.simplequests.api.SimpleQuestAPI;
 import io.github.flemmli97.simplequests.config.ConfigHandler;
-import io.github.flemmli97.simplequests.network.SQPacket;
+import io.github.flemmli97.simplequests.forge.client.ForgeClientHandler;
 import io.github.flemmli97.simplequests.player.QuestProgress;
 import io.github.flemmli97.simplequests.quest.entry.QuestEntryImpls;
 import io.github.flemmli97.simplequests.quest.types.Quest;
@@ -13,13 +13,10 @@ import net.minecraft.ChatFormatting;
 import net.minecraft.commands.CommandSourceStack;
 import net.minecraft.network.chat.Component;
 import net.minecraft.network.chat.MutableComponent;
-import net.minecraft.resources.ResourceLocation;
+import net.minecraft.network.protocol.common.custom.CustomPacketPayload;
 import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.world.entity.Entity;
-import net.minecraftforge.common.MinecraftForge;
-import net.minecraftforge.fml.loading.FMLPaths;
-import net.minecraftforge.network.NetworkHooks;
-import net.minecraftforge.registries.ForgeRegistries;
+import net.neoforged.fml.loading.FMLPaths;
+import net.neoforged.neoforge.common.NeoForge;
 
 import java.nio.file.Path;
 import java.util.ArrayList;
@@ -31,11 +28,6 @@ public class LoaderImpl implements LoaderHandler {
     @Override
     public Path getConfigPath() {
         return FMLPaths.CONFIGDIR.get();
-    }
-
-    @Override
-    public ResourceLocation fromEntity(Entity entity) {
-        return ForgeRegistries.ENTITY_TYPES.getKey(entity.getType());
     }
 
     @Override
@@ -62,22 +54,22 @@ public class LoaderImpl implements LoaderHandler {
             return List.of(Component.translatable(entry.description()));
         //Forge clients do it already
         List<MutableComponent> all = QuestEntryImpls.ItemEntry.itemComponents(entry.predicate());
-        if (all.size() < WRAP_AMOUNT || !NetworkHooks.isVanillaConnection(player.connection.connection))
+        if (all.size() < WRAP_AMOUNT || player.connection.getConnectionType().isNeoForge())
             return List.of(entry.translation(player));
         List<MutableComponent> list = new ArrayList<>();
         MutableComponent items = null;
         int i = 0;
         for (MutableComponent comp : all) {
             if (items == null) {
-                if (list.size() == 0)
+                if (list.isEmpty())
                     items = Component.literal("[").append(comp);
                 else
                     items = comp;
             } else
                 items.append(Component.literal(", ")).append(comp);
             i++;
-            if ((list.size() == 0 && i >= WRAP_AMOUNT - 1) || i >= WRAP_AMOUNT) {
-                if (list.size() == 0) {
+            if ((list.isEmpty() && i >= WRAP_AMOUNT - 1) || i >= WRAP_AMOUNT) {
+                if (list.isEmpty()) {
                     list.add(Component.translatable(ConfigHandler.LANG.get(player, entry.getId().toString() + ".multi"), items.withStyle(ChatFormatting.AQUA), entry.amount()));
                 } else
                     list.add(items.withStyle(ChatFormatting.AQUA));
@@ -85,7 +77,7 @@ public class LoaderImpl implements LoaderHandler {
                 items = null;
             }
         }
-        list.get(list.size() - 1).append(Component.literal("]"));
+        list.getLast().append(Component.literal("]"));
         return list;
     }
 
@@ -95,16 +87,16 @@ public class LoaderImpl implements LoaderHandler {
             if (handler.onComplete(event.player, event.trigger, event.quest, event.progress))
                 event.setCanceled(true);
         };
-        MinecraftForge.EVENT_BUS.addListener(cons);
+        NeoForge.EVENT_BUS.addListener(cons);
     }
 
     @Override
     public boolean onQuestComplete(ServerPlayer player, String trigger, Quest quest, QuestProgress progress) {
-        return !MinecraftForge.EVENT_BUS.post(new QuestCompleteEvent(player, trigger, quest, progress));
+        return !NeoForge.EVENT_BUS.post(new QuestCompleteEvent(player, trigger, quest, progress)).isCanceled();
     }
 
     @Override
-    public void sendToServer(SQPacket packet) {
-        SimpleQuestForge.DISPATCHER.sendToServer(packet);
+    public void sendToServer(CustomPacketPayload packet) {
+        ForgeClientHandler.sendNotifyPkt();
     }
 }
